wip/zabbix/zabbix.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix
  template:
    metadata:
      labels:
        app: zabbix
    spec:
      containers:
        - name: zabbix
          image: jboss/keycloak:10.0.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix
  namespace: zabbix
spec:
  selector:
    app: zabbix
  ports:
    - protocol: TCP
      port: 8080
